--- a/ticket/forms/message.twig
+++ b/ticket/forms/message.twig
@@ -91,6 +91,7 @@
                         <span class="sp-file-information">
                             <span class="sp-filename"></span>
                             <span class="sp-description sp-filesize"></span>
+                            <span class="sp-remove-attachment-text" style="color: #ef4444; font-size: 0.75rem; margin-left: 0.5rem; cursor: pointer; text-decoration: underline;">(Remove Attachment)</span>
                         </span>
                     </div>
 
@@ -111,6 +112,7 @@
                             <span class="sp-file-information">
                             <span class="sp-filename">{{ attachment.original_name }}</span>
                                 <span class="sp-description sp-filesize">({{ attachment.upload.size }})</span>
+                                <span class="sp-remove-attachment-text" style="color: #ef4444; font-size: 0.75rem; margin-left: 0.5rem; cursor: pointer; text-decoration: underline;">(Remove Attachment)</span>
                             </span>
                         </div>
 
