--- a/ticket/forms/message.twig
+++ b/ticket/forms/message.twig
@@ -112,7 +112,7 @@
                             <span class="sp-file-information">
                             <span class="sp-filename">{{ attachment.original_name }}</span>
                                 <span class="sp-description sp-filesize">({{ attachment.upload.size }})</span>
-                                <span class="sp-remove-attachment-text" style="color: #ef4444; font-size: 0.75rem; margin-left: 0.5rem; cursor: pointer; text-decoration: underline;">Remove</span>
+                                <span class="sp-remove-attachment-text" style="color: #ef4444; font-size: 0.75rem; margin-left: 0.5rem; cursor: pointer; text-decoration: underline;">(Remove Attachment)</span>
                             </span>
                         </div>
 
