--- a/ticket/forms/submit_ticket_step3.twig
+++ b/ticket/forms/submit_ticket_step3.twig
@@ -122,7 +122,7 @@
                                     <span class="sp-file-information" style="display: inline-block; vertical-align: middle;">
                                         <span class="sp-filename" style="color: #d1d5db; font-size: 0.875rem;"></span>
                                         <span class="sp-description sp-filesize" style="color: #9ca3af; font-size: 0.75rem; margin-left: 0.5rem;"></span>
-                                        <span class="sp-remove-attachment-text" style="color: #ef4444; font-size: 0.75rem; margin-left: 0.5rem; cursor: pointer; text-decoration: underline;">Remove</span>
+                                        <span class="sp-remove-attachment-text" style="color: #ef4444; font-size: 0.75rem; margin-left: 0.5rem; cursor: pointer; text-decoration: underline;">(Remove Attachment)</span>
                                     </span>
                                 </div>
                                 <div class="sp-delete-attachment sp-hidden" title="{{ Lang.get('general.remove') }}">
@@ -146,7 +146,7 @@
                                             <span class="sp-file-information" style="display: inline-block; vertical-align: middle;">
                                                 <span class="sp-filename" style="color: #d1d5db; font-size: 0.875rem;">{{ file }}</span>
                                                 <span class="sp-description sp-filesize" style="color: #9ca3af; font-size: 0.75rem; margin-left: 0.5rem;"></span>
-                                                <span class="sp-remove-attachment-text" style="color: #ef4444; font-size: 0.75rem; margin-left: 0.5rem; cursor: pointer; text-decoration: underline;">Remove</span>
+                                                <span class="sp-remove-attachment-text" style="color: #ef4444; font-size: 0.75rem; margin-left: 0.5rem; cursor: pointer; text-decoration: underline;">(Remove Attachment)</span>
                                             </span>
                                         </div>
                                         <div class="sp-delete-attachment" data-url="{{ route('ticket.frontend.attachment.destroy') }}" data-hash="{{ hash }}" title="{{ Lang.get('general.remove') }}">
