--- a/head_common.twig
+++ b/head_common.twig
@@ -1227,6 +1227,7 @@ a[href]:hover {
   padding-left: 0 !important;
   padding-top: 0.5rem !important;
   text-align: left !important;
+  margin-left: 0.125rem !important;
 }
 
 .sp-message-text p {
